vpc.tf
# This creates VPC ; VPC is a regional resource 

resource "aws_vpc" "main" {
  cidr_block     = "10.0.0.0/16"
}
